# parse-gcode

./: CMakeLists.txt
src/: mainwindow.cpp
src/common/: commonfunc.cpp
src/widget/: drawingarea.cpp
